# audio-text-dop

./: Dockerfile  README.md  compose.yaml  pyproject.toml
app/: main.py  transcriber.py
app/templates/: index.html
static/: styles.css
