[project]
name = "audio-text-dop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "ffmpeg-python>=0.2.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
